landing: Fix responsive styling for navbar custom messages.
The previous styling was brittle and ended up breaking in very small
phone-size views with the text overflowing the boundaries of the page.

The right fix is to move those heading outside the portico-header
class, since the CSS for that isn't generally appropriate here.

--- a/static/styles/portico/portico.scss
+++ b/static/styles/portico/portico.scss
@@ -1771,14 +1771,14 @@ input.new-organization-button {
     font-size: 1rem;
     background-color: hsl(177, 52%, 55%);
     background: linear-gradient(145deg, hsl(191, 56%, 55%), hsl(169, 65%, 42%));
+    color: hsl(0, 0%, 100%);
     font-weight: 600;
     text-align: center;
     position: relative;
-    top: -40px;
-    margin-left: calc(50% - 50vw);
-    width: 100vw;
+    top: 0px;
     padding: 10px;
     border-bottom: 1px solid hsl(177, 52%, 55%);
+    z-index: 5;
 
     a {
         color: hsl(0, 0%, 100%);
